@@ -1358,16 +1358,8 @@ processProduct(
             }
         }
     }
-    if (didMatch && queue_par->is_full && queue_par->early_cursor) {
-        char        buf[LDM_INFO_MAX];
-        timestampt  now;
-        (void)set_timestamp(&now);
-        log_warning("At oldest end of full queue: age=%g s, prod=%s",
-            d_diff_timestamp(&now, &queue_par->inserted),
-            s_prod_info(buf, sizeof(buf), infop, log_is_enabled_debug));
-        log_warning("Some desired products might not be processed! "
-                "Queue too small? System overloaded?");
-    }
+    if (didMatch)
+        PQ_WARN_IF_OLDEST(queue_par, prod_par, "Processed");
 
     if (!errorOccurred) {
         /*
